src/objects/AstrumScheduling__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Hold User Settings for Availability Blocks</description>
    <fields>
        <fullName>Friday_Sales_Visits__c</fullName>
        <label>Friday Sales Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday_Sales_Visits__c</fullName>
        <label>Monday Sales Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Visits_Per_Week__c</fullName>
        <label>Sales Visits Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saturday_Sales_Visits__c</fullName>
        <label>Saturday Sales Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday_Sales_Visits__c</fullName>
        <label>Sunday Sales Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Sales_Visits__c</fullName>
        <label>Thursday Sales Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_Sales_Visits__c</fullName>
        <label>Tuesday Sales Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Sales_Visits__c</fullName>
        <label>Wednesday Sales Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Astrum Scheduling</label>
</CustomObject>